# factorio-recipe-planner

./: .gitignore  Cargo.toml  README.md  generate-readmes.sh  get-data.sh
data-parser/: Cargo.toml  README.md
data-parser/src/: generic_transform.rs  lib.rs
data-parser/src/models/: recipe.rs
src/: generic_transform.rs  lib.rs  main.rs
