[package]
name = "factorio-recipe-planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
derive_more = "0.99.17"
full_moon = "0.19.0"
serde_json = "1.0.113"
smallstr = "0.3.0"
static_assertions = "1.1.0"
thiserror = "1.0.56"
