[package]
name = "data_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
derive_more = "0.99.17"
full_moon = "0.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_path_to_error = { version = "0.1.15", optional = true }
serde_with = { version = "3.6.0", features = ["time_0_3"] }
smallstr = "0.3.0"
static_assertions = "1.1.0"
thiserror = "1.0.56"
time = "0.3.32"

[dev-dependencies]
maplit = "1.0.2"

[features]
test-recipes = ["serde_path_to_error"]

[[bin]]
name = "test-recipes"
required-features = ["test-recipes"]
